# image-promotion-gitops

./: .gitignore  CLAUDE.md  LICENSE  PROJECT.md  README.md  dev-configmap-frontend-nginx.yaml  dev-deployment-backend.yaml  dev-deployment-frontend.yaml  dev-secret-backend-secret.yaml  dev-service-backend.yaml  dev-service-frontend.yaml  docker-compose.yaml
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env-example  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
apps/backend/alembic/: .gitkeep  env.py
apps/backend/alembic/versions/: 001_create_users_table.py  d2d7ce985f39_add_birth_date_column.py  f71017f66583_add_auth_columns.py
apps/backend/scripts/: init-db.sh  reset-db.sh
apps/backend/src/: __init__.py  main.py
apps/backend/src/adapters/: __init__.py
apps/backend/src/adapters/database/: __init__.py  config.py  models.py  postgresql_user_adapter.py
apps/backend/src/api/: __init__.py  auth_routes.py  main.py  routes.py  schemas.py  stats_routes.py
apps/backend/src/application/: __init__.py
apps/backend/src/application/services/: auth_service.py  user_service.py
apps/backend/src/domain/: __init__.py
apps/backend/src/domain/entities/: user.py
apps/backend/src/domain/exceptions/: __init__.py
apps/backend/src/domain/ports/: __init__.py  user_persistence_port.py
apps/backend/tests/: __init__.py  conftest.py  test_api.py  test_unit.py
apps/frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: auth.ts  client.ts  index.ts  stats.ts  users.ts
apps/frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Table.tsx  index.ts
apps/frontend/src/features/auth/: LoginPage.tsx  ProtectedRoute.tsx  index.ts
apps/frontend/src/features/dashboard/: DashboardPage.tsx
apps/frontend/src/features/users/: UserDetailPage.tsx  UserFormPage.tsx  UsersListPage.tsx  index.ts
apps/frontend/src/stores/: authStore.ts
apps/frontend/src/types/: index.ts
gitops/argocd/applications/: dev.yaml  prod.yaml  stg.yaml
gitops/kargo/: project.yaml  projectconfig.yaml  warehouse.yaml
gitops/kargo/stages/: dev.yaml  prod.yaml  stg.yaml
helm/backend/: Chart.yaml  values.yaml
helm/backend/templates/: _helpers.tpl  deployment.yaml  secret.yaml
helm/frontend/: Chart.yaml  values.yaml
helm/frontend/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
k8s/base/: kustomization.yaml
k8s/base/helm-output/backend/: all.yaml
k8s/base/helm-output/frontend/: all.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/stg/: kustomization.yaml
presentation/: runbook.md  slides.md  video-recording-guide.md
scripts/: generate-helm-output.sh  setup-argocd.sh  setup-kargo.sh  setup-minikube.sh
